--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xtreme IPTV - Movies & Series</title>
+    <title>Xtreme IPTV</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,29 +11,28 @@
             padding: 20px;
             background-color: #f9f9f9;
         }
+        .input-container {
+            margin-bottom: 20px;
+        }
         input {
-            width: 60%;
             padding: 10px;
-            margin: 20px 0;
+            margin: 10px;
+            width: 30%;
             border: 1px solid #ccc;
             border-radius: 5px;
-            font-size: 16px;
         }
         .category {
             margin-top: 20px;
             text-align: left;
             border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: #fff;
             padding: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
         }
         .category h2 {
             background-color: #007BFF;
             color: white;
             padding: 10px;
-            margin: -10px -10px 10px -10px;
-            border-radius: 5px 5px 0 0;
+            border-radius: 5px;
         }
         .item {
             display: flex;
@@ -45,13 +44,16 @@
         .item:last-child {
             border-bottom: none;
         }
-        .item button {
+        .item button, .copyButton {
             padding: 5px 10px;
             background-color: #007BFF;
             color: white;
             border: none;
             border-radius: 3px;
             cursor: pointer;
+        }
+        .copyButton {
+            background-color: #28a745;
         }
         #popupPlayer {
             display: none;
@@ -61,14 +63,13 @@
             transform: translate(-50%, -50%);
             z-index: 1000;
             background-color: #000;
-            padding: 20px;
+            padding: 10px;
             border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-            width: 80%;
-            max-width: 900px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
         #popupPlayer video {
             width: 100%;
+            max-width: 800px;
             border-radius: 10px;
         }
         #popupOverlay {
@@ -78,27 +79,29 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
+            background-color: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
         #closePopup {
             margin-top: 10px;
-            padding: 10px 20px;
+            padding: 5px 15px;
             background-color: #FF0000;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 16px;
-        }
-        #closePopup:hover {
-            background-color: #d10000;
         }
     </style>
 </head>
 <body>
-    <h1>Xtreme IPTV - Movies & Series</h1>
-    <input type="text" id="searchBox" placeholder="Search movies or series..." oninput="searchItems()" />
+    <h1>Xtreme IPTV</h1>
+    <div class="input-container">
+        <input type="text" id="url" placeholder="Enter Xtreme URL">
+        <input type="text" id="username" placeholder="Enter Username">
+        <input type="password" id="password" placeholder="Enter Password">
+        <button onclick="loadCategories()">Load Channels</button>
+    </div>
+
     <div id="categories"></div>
 
     <!-- Popup Player -->
@@ -109,39 +112,41 @@
     </div>
 
     <script>
-        const baseURL = "http://xtv.ooo:8080";
-        const username = "52882216";
-        const password = "581881255";
+        let allItems = []; // Store all items for searching
 
-        const categoriesDiv = document.getElementById('categories');
-        const searchBox = document.getElementById('searchBox');
-        const videoPlayer = document.getElementById('videoPlayer');
-        const popupOverlay = document.getElementById('popupOverlay');
-        const popupPlayer = document.getElementById('popupPlayer');
-
-        let allItems = []; // Store all movies and series for search
-
-        // Fetch categories and filter only movies and series
+        // Fetch categories and VOD items from the Xtreme API
         async function loadCategories() {
+            const url = document.getElementById('url').value;
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            if (!url || !username || !password) {
+                alert("Please enter all fields.");
+                return;
+            }
+
             try {
-                const response = await fetch(`${baseURL}/player_api.php?username=${username}&password=${password}&action=get_vod_categories`);
+                // Fetch categories
+                const response = await fetch(`${url}/player_api.php?username=${username}&password=${password}&action=get_vod_categories`);
                 const categories = await response.json();
+                if (categories.error) {
+                    alert(categories.error);
+                    return;
+                }
 
-                // Filter only movies and series categories
-                const filteredCategories = categories.filter(category =>
-                    category.category_name.toLowerCase().includes('movie') ||
-                    category.category_name.toLowerCase().includes('series')
-                );
+                // Clear previous categories
+                document.getElementById('categories').innerHTML = '';
 
-                for (const category of filteredCategories) {
+                // Fetch VOD items for each category
+                for (const category of categories) {
                     const categoryId = category.category_id;
                     const categoryName = category.category_name;
 
-                    // Fetch VOD (movies/series) for each category
-                    const vodResponse = await fetch(`${baseURL}/player_api.php?username=${username}&password=${password}&action=get_vod_streams&category_id=${categoryId}`);
+                    // Fetch items for the category
+                    const vodResponse = await fetch(`${url}/player_api.php?username=${username}&password=${password}&action=get_vod_streams&category_id=${categoryId}`);
                     const vodItems = await vodResponse.json();
 
-                    // Store all items for search
+                    // Store items for search
                     allItems = [...allItems, ...vodItems];
 
                     // Render category and items
@@ -153,8 +158,9 @@
             }
         }
 
-        // Render a single category and its items
+        // Render category and items
         function renderCategory(categoryName, items) {
+            const categoriesDiv = document.getElementById('categories');
             const categoryDiv = document.createElement('div');
             categoryDiv.classList.add('category');
 
@@ -173,8 +179,14 @@
                 playButton.textContent = "Play";
                 playButton.onclick = () => playItem(item.stream_url);
 
+                const copyButton = document.createElement('button');
+                copyButton.classList.add('copyButton');
+                copyButton.textContent = "Copy Link";
+                copyButton.onclick = () => copyToClipboard(item.stream_url);
+
                 itemDiv.appendChild(itemName);
                 itemDiv.appendChild(playButton);
+                itemDiv.appendChild(copyButton);
 
                 categoryDiv.appendChild(itemDiv);
             });
@@ -182,39 +194,33 @@
             categoriesDiv.appendChild(categoryDiv);
         }
 
-        // Play a selected item in the popup player
+        // Play item in popup player
         function playItem(url) {
+            const videoPlayer = document.getElementById('videoPlayer');
             videoPlayer.src = url;
-            popupOverlay.style.display = "block";
-            popupPlayer.style.display = "block";
+            document.getElementById('popupOverlay').style.display = "block";
+            document.getElementById('popupPlayer').style.display = "block";
         }
 
         // Close the popup player
         function closePopup() {
+            const videoPlayer = document.getElementById('videoPlayer');
             videoPlayer.pause();
             videoPlayer.src = "";
-            popupOverlay.style.display = "none";
-            popupPlayer.style.display = "none";
+            document.getElementById('popupOverlay').style.display = "none";
+            document.getElementById('popupPlayer').style.display = "none";
         }
 
-        // Search functionality
-        function searchItems() {
-            const query = searchBox.value.toLowerCase();
-            categoriesDiv.innerHTML = ''; // Clear existing categories
-
-            const filteredItems = allItems.filter(item =>
-                item.name.toLowerCase().includes(query)
-            );
-
-            if (filteredItems.length > 0) {
-                renderCategory('Search Results', filteredItems);
-            } else {
-                categoriesDiv.innerHTML = '<p>No results found.</p>';
-            }
+        // Copy the URL to clipboard
+        function copyToClipboard(url) {
+            const tempInput = document.createElement('input');
+            tempInput.value = url;
+            document.body.appendChild(tempInput);
+            tempInput.select();
+            document.execCommand('copy');
+            document.body.removeChild(tempInput);
+            alert("Link copied to clipboard!");
         }
-
-        // Load categories on page load
-        loadCategories();
     </script>
 </body>
 </html>
