--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <!-- Social Links -->
     <div class="social-links">
-       
+       <a href="https://mjplayer.netlify.app/" target="_blank">Video player</a>
         <a href="https://wa.me/qr/PRGY5QFNEXEJJ1" target="_blank">WhatsApp</a>
     </div>
 
