--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="social-links">
        <a href="https://mjplayer.netlify.app/" target="_blank">Video player</a>
         <a href="https://manikganjflix.blogspot.com/" target="_blank">Our Blogsite</a>
-        <a href="https://apk.e-droid.net/apk/app3182293-zia19o.apk?v=11" target="_blank">Movie App</a>
+        <a href="https://www.upload-apk.com/en/1yO0kOAMu13y5mW" target="_blank">Movie App</a>
         
         <a href="https://wa.me/qr/PRGY5QFNEXEJJ1" target="_blank">WhatsApp</a>
     </div>
