--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
     <!-- Social Links -->
     <div class="social-links">
        <a href="https://mjplayer.netlify.app/" target="_blank">Video player</a>
-        <a href="https://manikganjflix.blogspot.com/" target="_blank">Our Blogsite</a>
+       
         <a href="https://www.upload-apk.com/en/1yO0kOAMu13y5mW" target="_blank">Movie App</a>
         
-        <a href="https://wa.me/qr/PRGY5QFNEXEJJ1" target="_blank">WhatsApp</a>
+        <a href="https://t.me/manikcable" target="_blank">Playlist Group</a>
     </div>
 
     <!-- Container -->
