--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
        
         <a href="https://www.upload-apk.com/en/1yO0kOAMu13y5mW" target="_blank">Movie App</a>
         
-        <a href="https://t.me/manikcable" target="_blank">Playlist Group</a>
+        <a href="https://t.me/manikcable" target="_blank">Live Stream</a>
     </div>
 
     <!-- Container -->
