--- a/index.html
+++ b/index.html
@@ -161,9 +161,13 @@
 <div id="container-9836b306db829e2bea7ca60a527e5e79"></div><script type='text/javascript' src='//pl25668538.profitablecpmrate.com/19/5c/18/195c186416f0a12831ae2a4ee87763df.js'></script><script async="async" data-cfasync="false" src="//pl25668544.profitablecpmrate.com/9836b306db829e2bea7ca60a527e5e79/invoke.js"></script>
 <div id="container-9836b306db829e2bea7ca60a527e5e79"></div><script async="async" data-cfasync="false" src="//pl25668544.profitablecpmrate.com/9836b306db829e2bea7ca60a527e5e79/invoke.js"></script>
 <div id="container-9836b306db829e2bea7ca60a527e5e79"></div><script async="async" data-cfasync="false" src="//pl25668544.profitablecpmrate.com/9836b306db829e2bea7ca60a527e5e79/invoke.js"></script>
-<div id="container-9836b306db829e2bea7ca60a527e5e79"></div>
+<div id="container-9836b306db829e2bea7ca60a527e5e79"></div> 
+
+     <a href="https://www.upload-apk.com/en/1yO0kOAMu13y5mW" target="_blank">
+      <img src="https://i.ibb.co.com/Rp2Ls6d/Picsart-25-01-25-10-10-32-112.jpg" alt="Clickable Image">
+         
     <!-- Footer -->
-    <div class="footer">
+   <div class="footer">
         <p>© 2025 MJ-FLIX Playlist Loader. All rights reserved.</p>
         <p>Developed by ꧁༺🅨︎🅐︎🅝︎🅖︎🅧︎🅘︎🅐︎🅝︎🅖︎༻꧂.</p>
     </div>
