--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <div id="container-9836b306db829e2bea7ca60a527e5e79"></div> 
 
      <a href="https://www.upload-apk.com/en/1yO0kOAMu13y5mW" target="_blank">
-      <img src="🙂🙂" alt="Clickable Image">
+      <img src="https://i.ibb.co.com/mJHR9Kn/Picsart-25-01-25-10-26-51-615.jpg" alt="Clickable Image">
          
     <!-- Footer -->
    <div class="footer">
