--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 <div id="container-9836b306db829e2bea7ca60a527e5e79"></div> 
 
      <a href="https://www.upload-apk.com/en/1yO0kOAMu13y5mW" target="_blank">
-      <img src="🙂😁😁🌟🍿" alt="Clickable Image">
-         
+      <img src="https://i.ibb.co.com/mJHR9Kn/Picsart-25-01-25-10-26-51-615.jpg" alt="Resizable Image" weight="160" height="90">
+     </a> 
     <!-- Footer -->
    <div class="footer">
         <p>© 2025 MJ-FLIX Playlist Loader. All rights reserved.</p>
